fixed double scroll bug on deliveryAraSelection in store.home

--- a/app/less/common.less
+++ b/app/less/common.less
@@ -1023,7 +1023,7 @@ p {
 
 // Big Input
 
-input[type="text"], textarea {
+input[type="text"], input[type="tel"], textarea {
 	background: none;
 	border: 1px solid @onNoteColor50;
 	padding: 10px 10px 8px;
