--- a/app/less/mixins.less
+++ b/app/less/mixins.less
@@ -600,6 +600,7 @@ input, textarea {
 
 .overlayed {
 	.blur(2px);
+	overflow: hidden;
 }
 
 // OPACITY DELAY
