--- a/app/less/views/store-home.less
+++ b/app/less/views/store-home.less
@@ -26,7 +26,7 @@
 
 
 #editLocation {
-  padding: 20px @bodyPadding 13px;
+  padding: 13px @bodyPadding 13px;
   font-size: 18px;
   z-index: 101;
 
