--- a/app/less/views/store-tray.less
+++ b/app/less/views/store-tray.less
@@ -801,7 +801,7 @@
   &.active {
     background: @onNoteColor;
     color: @noteColor;
-    border: none;
+    border-color: @onNoteColor;
   }
 }
 
